# functional-fluids-on-surfaces

./: .gitmodules  makefile  pyproject.toml  shell.nix  simulation.jl  simulation.py
