[tool.poetry]
name = "functional-fluids-on-surfaces"
version = "0.1.0"
description = ""
authors = ["Siddharth Bhat <siddu.druid@gmail.com>"]
readme = "README.md"
packages = [{include = "functional_fluids_on_surfaces"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
polyscope = "^1.3.1"
sympy = "^1.11.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
